--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,7 +31,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,7 +53,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Create a Beautiful Soup object\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
    ]
   },
   {
@@ -79,11 +78,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# # Save the main area of the web page to a variable\n",
+    "# main_area = soup.find(\"div\", class_=\"container\")\n",
+    "    \n",
+    "# # Find all the articles in the main area of the web page\n",
+    "# articles = main_area.find_all(\"div\", class_=\"gv-promo-card-text\")\n",
+    "\n",
+    "# Extract all the text elements\n",
+    "text = soup.find_all('div', class_=\"list_text\")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty list to store the dictionaries\n"
+    "# Create an empty list to store the dictionaries\n",
+    "title_prev_list = []"
    ]
   },
   {
@@ -121,8 +127,20 @@
    "source": [
     "# Loop through the text elements\n",
     "# Extract the title and preview text from the elements\n",
-    "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
+    "for article in text:\n",
+    "    # Collect the article title\n",
+    "    title = article.find(\"div\", class_=\"content_title\").text\n",
+    "    # Collect the article preview text\n",
+    "    preview = article.find(\"div\", class_=\"article_teaser_body\").text\n",
+    "\n",
+    "    # Store each title and preview pair in a dictionary\n",
+    "    summary_dict = {\n",
+    "        \"title\": title,\n",
+    "        \"preview\": preview\n",
+    "        }\n",
+    "\n",
+    "    # Add the dictionary to the list\n",
+    "    title_prev_list.append(summary_dict)"
    ]
   },
   {
@@ -171,7 +189,8 @@
     }
    ],
    "source": [
-    "# Print the list to confirm success\n"
+    "# Print the list to confirm success\n",
+    "title_prev_list"
    ]
   },
   {
@@ -182,13 +201,6 @@
    "source": [
     "browser.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -207,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
